syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/message-store/gen/proto/";

enum SenderType {
  CONTACT = 0;
  USER = 1;
}
enum MessageType {
  MESSAGE = 0;
  FILE = 1;
}
enum MessageDirection {
  INBOUND = 0;
  OUTBOUND = 1;
}
enum MessageChannel {
  WEB_CHAT = 0;
  MAIL = 1;
  VOICE = 2;
}

message Message {
  int64 id = 1;
  int64 feedId = 2;
  MessageType type = 3;
  string message = 4;
  MessageChannel channel = 5;
  MessageDirection direction = 6;
  google.protobuf.Timestamp time = 7;

  string username = 8;
  string userId = 9;
  string contactId = 10;
}